@@ -2,6 +2,11 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** New features
+
+  dd now accepts the count_bytes, skip_bytes iflags and the count_bytes
+  oflag, to more easily allow processing portions of a file.
+
 ** Bug fixes
 
   mv now lets you move a symlink onto a same-inode destination file that
